# mecanum-bot

./: README.md
alog_control/: CMakeLists.txt  package.xml
alog_control/launch/: amcl.launch  aruco.launch  gmapping_slam.launch  joystick.launch  mapping.launch  move_base.launch  nav_confi.rviz  navigation.launch  odom_custom.launch  startup.launch  traj_trac.launch
alog_control/scripts/: base_move.py  gnav.py  gnav2.py  go_to_goal.py  launch_control.py  vel_pub.py  vel_r_data.csv  vel_x_data.csv  vel_y_data.csv  waypoints_controller.py  waypoints_controller_traj_gen.py  waypoints_traj_controller.py
alog_control/src/: config.rviz
embedded_communication/: CMakeLists.txt  package.xml
embedded_communication/msg/: Battery.msg  Cliff.msg
embedded_communication/scripts/: cliff_manager.py  light_board_controller.py  ultrasonic_manager.py  ultrasonic_read.py  wheel_light_controller.py
embedded_communication/srv/: LightControl.srv
holonomic_controller/: CMakeLists.txt  package.xml
holonomic_controller/include/holonomic_controller/: holonomic_controller_node.h  holonomic_odometry.h
holonomic_controller/scripts/: holonomic_joystick.py  motor_driver_node.py
holonomic_controller/src/: holonomic_controller_node.cpp  holonomic_odometry.cpp  lateral_diff_calculation.py
rplidar_ros/launch/: rplidar_a3.launch
stop_recovery/: CMakeLists.txt  package.xml  stop_recovery_plugin.xml
stop_recovery/src/: stop_recovery.cpp  stop_recovery.h
